# axum-demo

./: Cargo.toml  README.md  rustfmt.toml
models/: Cargo.toml
models/src/: trees.rs  users.rs
src/: api.rs  common.rs  error.rs  main.rs  models.rs
src/auth/: api.rs  jwt.rs  mod.rs
src/common/: db.rs  db_bb8.rs  error.rs  mod.rs  pagination.rs
src/models/: mod.rs  prelude.rs  trees.rs  users.rs
