[package]
name = "web_api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5"}
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
validator = { version = "0.18.1", features = ["derive"] }

sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"

dotenvy = "0.15.7"
anyhow = "1.0.88"
thiserror = "1.0.63"
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3

[lints.rust]
unused_variables = "allow"
