[package]
name = "web_tokio_pg"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1"}
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
validator = { version = "0.20.0", features = ["derive"] }

tokio-postgres = { version = "0.7.12", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
deadpool-postgres = "0.14.1"
postgres-from-row = "0.5.2"

serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
serde_urlencoded = "0.7.1"

dotenvy = "0.15.7"
anyhow = "1.0.95"
thiserror = "2.0.11"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "serde",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3

[lints.rust]
unused_variables = "allow"
